log
Sun May 15 02:10:05 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
4a3491b
Sun May 15 03:12:41 UTC 2022: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:67:24: error: ‘l’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
           if(n->sudo[m][l] != 0){
              ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3dd6995
Sun May 15 03:24:21 UTC 2022: 
 sudoku.c | 36 ++++++++++++++++--------------------
 1 file changed, 16 insertions(+), 20 deletions(-)
 tests:  0|5
total_score: 0/70
58d9322
Sun May 15 03:27:24 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
3b5deb1
Sun May 15 20:16:43 UTC 2022: 
 sudoku.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
3301b70
Sun May 15 20:16:56 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4396ada
Sun May 15 20:17:28 UTC 2022: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  0|5
total_score: 0/70
01cc5f5
